[workspace]
members = [
    "spacecan",
    "spacecan-firmware",
    "spacecan-virtual"
]

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false
panic = "abort"

[profile.release]
opt-level = 3
debug = false
overflow-checks = true
lto = true
panic = "abort"
strip = "debuginfo"

[alias]
run-virtual = "run -p spacecan-virtual"
run-firmware = "run -p spacecan-firmware"
build-virtual = "build -p spacecan-virtual"
build-firmware = "build -p spacecan-firmware"



