[package]
name = "spacecan-virtual"
version = "0.1.0"
edition = "2024"

[features]
default = []
async = ["tokio", "tokio-stream"]

[dependencies]
anyhow = "1.0.98"
futures-core = "0.3.31"
socketcan = "2.0"
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1.17", optional = true }

[[bin]]
name = "responder"
path = "responder.rs"

[[bin]]
name = "controller"
path = "controller.rs"
