[package]
name = "spacecan"
version = "0.1.0"
edition = "2024"

[features]
default = ["no_std"]
std = ["serde_json/std"]
no_std = ["hashbrown", "ahash"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", optional = true, features = ["std"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
nb = "1.0"
stm32f7xx-hal = { version = "0.8", features = ["stm32f767"], default-features = false }
hashbrown = { version = "0.14", default-features = false, optional = true }
serde-json-core = { version = "0.1", default-features = false, optional = true }
ahash = { version = "0.8", default-features = false, optional = true }
linked_list_allocator = "0.10"
bxcan = "0.7"
fugit = "0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
